syntax = "proto3";

option go_package = "proto/auth";
service AuthService {
  rpc Login(LoginRequest) returns(LoginResponse){}
  rpc Register(RegisterRequest) returns(RegisterResponse){}
  rpc VerifyJwt(VerifyRequest) returns(VerifyResponse){}
  rpc GetUserId(UserIdRequest) returns(UserIdResponse){}
}
message LoginRequest{
  string email = 1;
  string password = 2;
}
message LoginResponse{
  string token = 1;
  int32 status = 2;
}
message RegisterRequest{
  string email = 1;
  string password = 2;
}

message RegisterResponse{
  int32 status = 1;
}
message VerifyRequest{
  string token = 1;
}
message VerifyResponse{
  int32 status = 1;
}
message UserIdRequest{
  string token = 1;
}

message UserIdResponse {
  string userId = 1;
}

